@@ -10,7 +10,8 @@
           by newer versions of Kustvakt. (diewald)
         - Newer versions of Kustvakt disabled default
           scope on authorization requests. (diewald)
-          
+        - Introduce logo addon. (diewald)
+
 0.49 2023-02-23
         - Introduce conllu2korapxml command via plugin. (diewald)
         - Introduce korapxml2conllu command via plugin. (diewald)
